update go dóc
